unpackaged/main/default/objects/Avalara_Config__mdt/Avalara_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for the Avalara AvaTax integration. Stores company code, environment, ship-from address, and feature flags.</description>
    <label>Avalara Config</label>
    <pluralLabel>Avalara Configs</pluralLabel>
</CustomObject>