unpackaged/main/default/objects/Avalara_Config__mdt/fields/Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Company_Code__c</fullName>
    <description>Avalara Company Code, sent in every CreateTransaction request.</description>
    <label>Company Code</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>