unpackaged/main/default/objects/Avalara_Config__mdt/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <description>Avalara numeric Company ID (required by ECM endpoints). Retrieved from GetCompanies API response.</description>
    <label>Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>