unpackaged/main/default/objects/Avalara_Config__mdt/fields/Default_Tax_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Tax_Code__c</fullName>
    <description>Fallback Avalara tax code when Avalara_Tax_Code__c is blank on an Item.</description>
    <label>Default Tax Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>