unpackaged/main/default/objects/Avalara_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this is the active configuration record for its environment. Only one record per Environment should be active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>