unpackaged/main/default/objects/Avalara_Config__mdt/fields/ShipFrom_City__c.field-meta.xml
<CustomField>
    <fullName>ShipFrom_City__c</fullName>
    <description>TCH business address: city.</description>
    <label>ShipFrom City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>