unpackaged/main/default/objects/Avalara_Config__mdt/fields/ShipFrom_Country__c.field-meta.xml
<CustomField>
    <fullName>ShipFrom_Country__c</fullName>
    <description>TCH business address: country (ISO 2-char code).</description>
    <label>ShipFrom Country</label>
    <length>2</length>
    <type>Text</type>
</CustomField>