unpackaged/main/default/objects/Avalara_Config__mdt/fields/ShipFrom_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipFrom_PostalCode__c</fullName>
    <description>TCH business address: zip/postal code.</description>
    <label>ShipFrom PostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>