unpackaged/main/default/objects/Avalara_Config__mdt/fields/ShipFrom_State__c.field-meta.xml
<CustomField>
    <fullName>ShipFrom_State__c</fullName>
    <description>TCH business address: state code (2 characters).</description>
    <label>ShipFrom State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>