unpackaged/main/default/objects/Avalara_Config__mdt/fields/ShipFrom_Street__c.field-meta.xml
<CustomField>
    <fullName>ShipFrom_Street__c</fullName>
    <description>TCH business address: street (origin for tax jurisdiction calculation).</description>
    <label>ShipFrom Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>