unpackaged/main/default/objects/Avalara_Config__mdt/fields/Tax_Exemption_Page_Path__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Page_Path__c</fullName>
    <description>Relative path to the Tax Exemption page in Experience Cloud (e.g. /s/tax-exemption). Used by checkout to redirect registered customers.</description>
    <label>Tax Exemption Page Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>